# stwo-sol-verifier

./: .gitignore  Cargo.toml  FIBONACCI_GAS_ANALYSIS_REPORT.md  README.md  foundry.toml  gas_profiling_logs.txt  remappings.txt
contracts/: Counter.s.sol  Counter.t.sol
contracts/circle/: CircleDomainM31.sol  CirclePoint.sol  CirclePointM31.sol  CirclePolyDegreeBound.sol
contracts/core/: CanonicCoset.sol  CircleDomain.sol  CirclePoint.sol  CommitmentSchemeVerifierLib.sol  ComponentsLib.sol  Coset.sol  CosetM31.sol  FrameworkComponentLib.sol  KeccakChannelLib.sol  PointEvaluationAccumulator.sol  TraceLocationAllocatorLib.sol
contracts/cosets/: CanonicCosetM31.sol  Coset.sol  CosetM31.sol
contracts/fields/: CM31Field.sol  M31Field.sol  QM31Field.sol
contracts/framework/: IFrameworkEval.sol  PointEvaluatorLib.sol  TreeSubspan.sol  TreeVecExtensions.sol
contracts/libraries/: CommitmentSchemeVerifierLib.sol  ComponentsLib.sol  FrameworkComponentLib.sol  TraceLocationAllocatorLib.sol
contracts/pcs/: FriVerifier.sol  PcsConfig.sol  TreeVec.sol
contracts/secure_poly/: PolyUtils.sol  SecureCirclePoly.sol
contracts/utils/: ArrayUtils.sol  TreeSubspan.sol
contracts/vcs/: MerkleVerifier.sol
contracts/verifier/: ProofParser.sol  StwoVerifier.sol
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/examples/fibonacci/: Cargo.toml
crates/examples/fibonacci/src/: fibonacci_circuit.rs  main.rs  prove.rs  verify.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: deploy.rs
script/: DeploySTWOVerifier.s.sol
test/: FieldsBenchmark.sol
