[workspace]
resolver = "2"
members = [
    "crates/contracts",
    "crates/verifier",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Alloy framework for Ethereum interaction
alloy = { version = "1.1.3", features = ["full", "node-bindings"] }
alloy-primitives = "1.1.3"
alloy-sol-types = "1.1.3"
alloy-contract = "1.1.3"
alloy-provider = "1.1.3"
alloy-network = "1.1.3"
alloy-signer = "1.1.3"
alloy-signer-local = "1.1.3"

# STWO dependencies
stwo = { git = "https://github.com/piotr-stec/stwo-fork-keccak", features = ["prover"], branch = "channel/solidity" }
std-shims = { git = "https://github.com/piotr-stec/stwo-fork-keccak", features = ["std"],branch = "channel/solidity"  }
stwo-constraint-framework = { git = "https://github.com/piotr-stec/stwo-fork-keccak", features = ["prover", "std"], branch = "channel/solidity" }
stwo-polynomial = { git = "https://github.com/piotr-stec/stwo-polynomial" }
# Common dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
num-traits = "0.2"
