[package]
name = "verifier"
version.workspace = true
edition.workspace = true

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true
alloy-provider.workspace = true
alloy-network.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
clap = { version = "4.0", features = ["derive"] }
reqwest = "0.11"