[package]
name = "fibonacci"
version.workspace = true
edition.workspace = true
description = "Fibonacci STARK proof verification example using STWOVerifier"

[[bin]]
name = "fibonacci"
path = "src/main.rs"

[dependencies]
# Local crates
verifier = { path = "../../verifier" }
contracts = { path = "../../contracts" }

# External dependencies
alloy.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.0", features = ["derive"] }
stwo.workspace = true
stwo-constraint-framework.workspace = true
stwo-polynomial.workspace = true
num-traits.workspace = true